# brainjar

./: .brainjarignore.default  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN-V2.md  Dockerfile  LICENSE  README.md  TESTING.md  TEST_COMPLETION_REPORT.md  TEST_SUITE_SUMMARY.md  docker-compose.yml  release-plz.toml  run_tests.sh
.github/: BRANCH_PROTECTION.md
.github/workflows/: ci.yml  docker-publish.yml  golden-corpus.yml  pr-gate.yml  release-plz.yml  release.yml  sync-dev.yml
docs/: SPEC-chunking.md  SPEC-test-harness.md  SPEC-watch.md  decay-visualizer.html  embedding-models.md  openai-embedding-research.md  openai-testing-results.md
examples/: graph_debug.rs  graph_smoke_test.rs
marketing/: gtm-posts.md
src/: aws.rs  chunk.rs  config.rs  db.rs  embed.rs  extract.rs  fuzzy.rs  graph.rs  init.rs  lib.rs  local_search.rs  main.rs  mcp.rs  search.rs  state.rs  status.rs  sync.rs  treesitter.rs  tuning.rs  watch.rs
src/terraform/: main.tf.tmpl  outputs.tf.tmpl  variables.tf.tmpl
terraform/: README.md
test-corpus/: README.md  architecture.md  brainjar-gemini-backup.toml  brainjar-openai-large.toml  brainjar-openai-small.toml  brainjar-openai.toml  brainjar-test-debug.toml  client-notes.md  generate_memories_corpus.py  hidden-connections.md  incident-report.md  onboarding.md  openai-large-test-results.txt  openai-test-results-final.txt  openai-test-results.txt  roadmap.md  security-review.md  semantic-traps.md  sprint-retro.md
test-corpus/.brainjar/: test-corpus_graph.db
test-corpus/code/: DataModels.kt  DataProcessor.java  EventBus.cs  Protocol.swift  README.md  atlas_ingestion.rs  config.lua  event_router.rb  handlers.js  ingestion.c  metrics.scala  middleware.php  pipeline.ts  pipeline.zig  storage.go  supervisor.ex  transform.cpp  transform_engine.py
test-corpus/docs/: atlasql-guide.md  cross-reference-chain.md  meeting-notes-march.md  project-overview.md  synonym-concepts.md  typo-corpus.md
test-corpus/docs/memories/: canonical_dates.json
test-corpus/docs/memories/consolidated/: consolidated_2025-11-18_project-health.docx  consolidated_2025-12-01_weekly.md  consolidated_2026-01-06_project-health.docx  consolidated_2026-01-28_insights.md  consolidated_2026-01-28_weekly.md  consolidated_2026-02-17_project-health.docx  consolidated_2026-03-22_project-health.docx
test-corpus/docs/memories/episodic/: 2025-11-03_debug-session.md  2025-11-03_session-log.md  2026-01-06_incident-debrief.docx  2026-01-14_daily-standup.md  2026-01-14_debug-session.md  2026-02-17_incident-debrief.docx  2026-03-22_incident-debrief.docx
test-corpus/docs/memories/semantic/: architecture-preferences_2026-01-06.docx  architecture-preferences_2026-02-17.docx  codebase-preference_2025-12-22.md  codebase-preference_2026-02-05.md  domain-terminology_2025-11-03.md  domain-terminology_2025-12-22.md  domain-terminology_2026-03-15.md  search-relevance-feedback_2025-11-03.md  user-intent-patterns_2025-12-22.md
test-corpus/memories/: canonical_dates.json
test-corpus/memories/consolidated/: consolidated_2025-12-01_insights.md  consolidated_2026-03-15_insights.md  consolidated_2026-03-15_weekly.md
test-corpus/memories/episodic/: 2025-11-03_daily-standup.md  2025-11-18_incident-debrief.docx  2025-12-15_daily-standup.md  2025-12-15_debug-session.md  2025-12-15_session-log.md  2026-01-14_session-log.md  2026-02-17_daily-standup.md  2026-02-17_debug-session.md  2026-02-17_session-log.md  2026-03-15_daily-standup.md  2026-03-15_debug-session.md  2026-03-15_session-log.md
test-corpus/memories/semantic/: architecture-preferences_2025-11-18.docx  architecture-preferences_2026-03-22.docx  codebase-preference_2025-11-03.md  codebase-preference_2026-03-15.md  domain-terminology_2026-02-05.md  search-relevance-feedback_2025-12-22.md  search-relevance-feedback_2026-02-05.md  search-relevance-feedback_2026-03-15.md  user-intent-patterns_2025-11-03.md  user-intent-patterns_2026-02-05.md  user-intent-patterns_2026-03-15.md
tests/: integration.rs  integration_helpers.rs  search_integration.rs  test_config.rs  test_graph_integ.rs  test_init_data_dir.rs  test_sync.rs
