[package]
name = "brainjar"
version = "0.3.0"
edition = "2024"
description = "AI agent memory with local SQLite backend — FTS5, fuzzy, and vector search"
authors = ["Luke Libraro <luke@farad.dev>"]
license = "MIT"
repository = "https://github.com/farad-labs/brainjar"
readme = "README.md"
keywords = ["ai", "memory", "sqlite", "mcp", "search"]
categories = ["command-line-utilities"]

[[bin]]
name = "brainjar"
path = "src/main.rs"

[lib]
name = "brainjar"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
rusqlite = { version = "0.39", features = ["bundled"] }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }

clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
walkdir = "2"
indicatif = "0.17"
colored = "2"
glob = "0.3"
anyhow = "1"
nucleo-matcher = "0.3"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
dirs = "5"
dialoguer = "0.11"
rustyline = { version = "18", features = ["derive"] }
graphqlite = "0.4.3"
sqlite-vec = "=0.1.9"
zerocopy = { version = "0.8", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
