[package]
name = "brainjar"
version = "0.4.0"
edition = "2024"
description = "AI agent memory with local SQLite backend — FTS5, fuzzy, and vector search"
authors = ["Luke Libraro <luke@farad.dev>"]
license = "MIT"
repository = "https://github.com/farad-labs/brainjar"
readme = "README.md"
keywords = ["ai", "memory", "sqlite", "mcp", "search"]
categories = ["command-line-utilities"]

[[bin]]
name = "brainjar"
path = "src/main.rs"

[lib]
name = "brainjar"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
rusqlite = { version = "0.39", features = ["bundled"] }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }

clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
sha2 = "0.10"
walkdir = "2"
indicatif = "0.17"
colored = "3"
glob = "0.3"
anyhow = "1"
nucleo-matcher = "0.3"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
dirs = "6"
dialoguer = "0.12"
rustyline = { version = "18", features = ["derive"] }
graphqlite = "0.4.3"
sqlite-vec = "=0.1.9"
zerocopy = { version = "0.8", features = ["derive"] }
fastembed = { version = "5", optional = true }
once_cell = "1"
tree-sitter = { version = "0.25", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
# ts-core languages
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-c-sharp = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-php = { version = "0.24", optional = true }
tree-sitter-bash = { version = "0.25", optional = true }
# ts-extended languages
tree-sitter-kotlin = { version = "0.3", optional = true }
tree-sitter-swift = { version = "0.7", optional = true }
tree-sitter-elixir = { version = "0.3", optional = true }
tree-sitter-lua = { version = "0.5", optional = true }
tree-sitter-haskell = { version = "0.23", optional = true }
tree-sitter-html = { version = "0.23", optional = true }
tree-sitter-css = { version = "0.25", optional = true }
tree-sitter-toml-ng = { version = "0.7", optional = true }
tree-sitter-yaml = { version = "0.7", optional = true }
tree-sitter-json = { version = "0.24", optional = true }
tree-sitter-ocaml = { version = "0.24", optional = true }
tree-sitter-dart = { version = "0.1", optional = true }

[features]
default = ["local-embed", "ts-core"]
golden-corpus = []
local-embed = ["fastembed"]
ts-core = [
  "dep:tree-sitter",
  "dep:tree-sitter-rust",
  "dep:tree-sitter-python",
  "dep:tree-sitter-javascript",
  "dep:tree-sitter-typescript",
  "dep:tree-sitter-go",
  "dep:tree-sitter-c",
  "dep:tree-sitter-cpp",
  "dep:tree-sitter-c-sharp",
  "dep:tree-sitter-java",
  "dep:tree-sitter-ruby",
  "dep:tree-sitter-php",
  "dep:tree-sitter-bash",
]
ts-extended = [
  "ts-core",
  "dep:tree-sitter-kotlin",
  "dep:tree-sitter-swift",
  "dep:tree-sitter-elixir",
  "dep:tree-sitter-lua",
  "dep:tree-sitter-haskell",
  "dep:tree-sitter-html",
  "dep:tree-sitter-css",
  "dep:tree-sitter-toml-ng",
  "dep:tree-sitter-yaml",
  "dep:tree-sitter-json",
  "dep:tree-sitter-ocaml",
  "dep:tree-sitter-dart",
]

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
